fix: gap on right of navbar on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,8 @@
-html { 
-  overflow-x: hidden;
+html, body {
+  overflow-x: hidden !important;
+}
+
+body {
   line-height: 1.5em;
 }
 
